Adds register functionality

--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://luffy:luffy@cluster0.s4htur1.mongodb.net/test"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=73f2e48cf6a4e94a841f
+GITHUB_SECRET=3b5df5bff1ebaa5318e8ba465cf6ae23dc4669eb
+
+GOOGLE_CLIENT_ID=247087823378-rhnr7gueeoro7okid74c2gef96gmtfn2.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
